# chat-gpt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
chat_gpt/: config.py  main.py  script.py
chat_gpt/commands/: chat.py  youtube.py
chat_gpt/utils/: callbacks.py
