[tool.poetry]
name = "custom-chat-gpt"
version = "0.2.1"
description = "Use chapgpt from your terminal"
authors = ["RomainEconomics <jouhameau.romain@gmail.com>"]
readme = "README.md"
packages = [{include = "chat_gpt"}]

[tool.poetry.dependencies]
python = "^3.8.1"
openai = "^0.27.0"
rich = "^13.3"
typer = "^0.7.0"
langchain = "^0.0.146"
youtube-transcript-api = "^0.6.0"
chromadb = "^0.3.21"
tiktoken = "^0.3.3"
faiss-cpu = "^1.7.3"

[tool.poetry.scripts]
chat-gpt = "chat_gpt.main:app"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
