[project]
name = "custom-chat-gpt"
version = "0.6.0"
description = "Use chapgpt from your terminal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langchain>=0.3.3",
  "langchain-anthropic>=0.2.3",
  "langchain-community>=0.3.2",
  "langchain-openai>=0.2.2",
  "openai>=1.51.2",
  "rich>=13.9.2",
  "typer>=0.12.5",
  "youtube-transcript-api>=0.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chat_gpt"]

[project.scripts]
chat-gpt = "chat_gpt.main:app"
